--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
   <li><a href="http://github.com/0288007">Github</a></li>
     <li><a href="http://www.youtube.com/@intheballs">YouTube</a></li>
   <li><a href="mailto:0288007@schoolsnet.act.edu.au">E-mail</a></li>	
-  <li><a href="./newchatroom/login.php">CHATROOM!!</a></li>
+  <li><a href="./chatroom/index.html">CHATROOM!!</a></li>
   <li><a href="Clockwork.htm">ClockworkOS</a></li>	  
 </ul>
 						
@@ -28,6 +28,9 @@
 	 <button style='font-weight: bold;' onclick="window.location.href='animator.html';">Animator Vs. Animation</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='animator2.html';">Animator Vs. Animation II</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='animator3.html';">Animator Vs. Animation III</button>&nbsp;
+	 <button onclick="window.location.href='pigs.html';">Bad Piggies</button>&nbsp;
+	 <button onclick="window.location.href='./bitl/index.html';">BitLife</button>&nbsp;
+	 <button onclick="window.location.href='./bit/index.html';">Bit Planes</button>&nbsp;
      <button onclick="window.location.href='btd.html';">Bloons TD</button>&nbsp;
      <button onclick="window.location.href='btd2.html';">Bloons TD 2</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='btd3.html';">Bloons TD 3</button>&nbsp;
@@ -35,9 +38,11 @@
 	 <button style='font-weight: bold;' onclick="window.location.href='bison.html';">Burrito Bison</button>&nbsp;
      <button onclick="window.location.href='bloons.html';">Bloons</button>&nbsp;
      <button onclick="window.location.href='bloxorz.html';">Bloxorz</button>&nbsp;
+	 <button onclick="window.location.href='cat.html';">Cat Mario</button>&nbsp;
 	 <button onclick="window.location.href='commando.html';">Commando</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='commando2.html';">Commando 2</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='./foldered games/dos/keen/keen4.html';">Commander Keen 4</button>&nbsp;
+	 <button style='font-weight: bold;' onclick="window.location.href='./clicker/index.html';">Cookie Clicker</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='dadnme.html';">Dad n' Me</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='dontescape1.html';">Don't Escape</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='dontescape.html';">Don't Escape 2</button>&nbsp;
@@ -52,7 +57,10 @@
      <button style='font-weight: bold;' onclick="window.location.href='fpa1.html';">Fancy Pants Adventure World 1</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='fpa2.html';">Fancy Pants Adventure World 2</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='fpa3.html';">Fancy Pants Adventure World 3</button>&nbsp;
+	 <button style='font-weight: bold;' onclick="window.location.href='fpa41.html';">Fancy Pants Adventure World 4: Part 1</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='fbwg.html';">Fireboy & Watergirl: The Forest Temple</button>&nbsp;
+	 <button style='font-weight: bold;' onclick="window.location.href='./fnaf/index.html';">Five Nights at Freddy's</button>&nbsp;
+	 	 <button style='font-weight: bold;' onclick="window.location.href='./fnf/index.html';">Friday Night Funkin</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='gangsta.html';">Gangster Bros</button>&nbsp;
      <button onclick="window.location.href='hs-btb.html';">Henry Stickmin - Breaking the Bank</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='hs-etp.html';">Henry Stickmin - Escaping the Prison</button>&nbsp;
@@ -65,11 +73,13 @@
      <button onclick="window.location.href='ltf2.html';">Learn to Fly 2</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='linerider.html';">Line Rider</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='combat.html';">Mario Combat</button>&nbsp;
+	 <button onclick="window.location.href='meat.html';">Meat Boy</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='eaglercraft.html';">Minecraft 1.5.2</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='motherload.html';">Motherload</button>&nbsp;
      <button onclick="window.location.href='n.html';">N</button>&nbsp;
      <button onclick="window.location.href='pacman.html';">Pacman</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='papasrizzaria.html';">Papa's Pizzaria</button>&nbsp;
+	 <button style='font-weight: bold;' onclick="window.location.href='pvz.html';">Plants vs. Zombies</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='portalflash.html';">Portal Flash</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='rs.html';">Riddle School</button>&nbsp;
      <button onclick="window.location.href='rs2.html';">Riddle School 2</button>&nbsp;
@@ -78,7 +88,6 @@
      <button onclick="window.location.href='rs5.html';">Riddle School 5</button>&nbsp;
      <button onclick="window.location.href='rs-t.html';">Riddle School - Transfer</button>&nbsp;
      <button onclick="window.location.href='rs-t2.html';">Riddle School - Transfer 2</button>&nbsp;
-	 <button style='font-weight: bold;' onclick="window.location.href='scale.html';">Scale of the Universe 2</button>&nbsp;
      <button onclick="window.location.href='sch.html';">Shopping Cart Hero</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='skullkid.html';">skullkid</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='./foldered games/dos/simcity/simcity.html';">Simcity</button>&nbsp;
@@ -92,11 +101,12 @@
      <button style='font-weight: bold;' onclick="window.location.href='marioflash.html';">Super Mario Flash</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='supersmashflash.html';">Super Smash Flash</button>&nbsp;
      <button onclick="window.location.href='tetris.html';">Tetris</button>&nbsp;
-	 <button style='font-weight: bold;' onclick="window.location.href='sump.html';">The Assumption Song</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='issac.html';">The Binding of Issac</button>&nbsp;
+	 	 <button style='font-weight: bold;' onclick="window.location.href='./earth/index.html';">The Final Earth 2</button>&nbsp;
      <button style='font-weight: bold;' onclick="window.location.href='showdown.html';">The Ultimate Showdown of Ultimate Destiny</button>&nbsp;
      <button onclick="window.location.href='impossiblequiz.html';">The Impossible Quiz</button>&nbsp;
 	 <button onclick="window.location.href='therightmix.html';">The Right Mix</button>&nbsp;
+	 <button onclick="window.location.href='./totm/index.html';">Tomb of the Mask</button>&nbsp;
 	 <button style='font-weight: bold;' onclick="window.location.href='turtle.html';">Toss the Turtle</button>&nbsp;
      <button onclick="window.location.href='hardestgame.html';">The World's Hardest Game</button>
 	 <button onclick="window.location.href='tario.html';">Tuper Tario Tros</button>
@@ -107,7 +117,7 @@
 		   <div id="quote">
 <SCRIPT LANGUAGE="JavaScript">
 <!-- Begin
-var howMany = 55
+var howMany = 67
 var quote = new Array(howMany+1)
 quote[0]="Don't be afraid, John. *Cocks Shotgun*"
 quote[1]="War... War never changes"
@@ -165,6 +175,18 @@ quote[52]="This man Makarov is fighting his own war and he has no rules, no boun
 quote[53]="My name is Craig Tucker. Last week was my birthday. My grandma gave me a check for $100. I was so happy. But then, four kids from school came to my house and said I should use my $100 to invest in becoming a Peruvian flute band. They promised I would double my money in one afternoon, but the government arrested us along with all the other Peruvian flute bands and took us to an intern camp in Miami. We begged to go home, but instead, the government told us they were sending us to Peru. And so, that is why I am now in Peru. If I die, let it be known that it is because four guys I don't even like from school lied to me and took my birthday money."
 quote[54]="Look for the Gummy Bear album in stores on November 13th, with lots of music, videos and extras."
 quote[55]="Now with 25% less artificial bullshit!"
+quote[56]="Life is ROBLOX"
+quote[57]="Shoutout to Luca"
+quote[58]="Shoutout to Nicolas S"
+quote[59]="Shoutout to Oli G"
+quote[60]="Shoutout to Josh BR"
+quote[61]="I am placing blocks and shit cause im in fuckin Minecraft!"
+quote[62]="I don't wipe my ass cause a real one don't let shit bother him"
+quote[63]="I, AM STEVE"
+quote[64]="On skibidi?"
+quote[65]="Solve world hunger by blowing up Hungary"
+quote[66]="Insert cheesy one-liner here"
+quote[67]="Don't be a racist. Hate everyone equally"
 function rndnumber(){
 var randscript = -1
 while (randscript < 0 || randscript > howMany || isNaN(randscript)){
