--- a/html/info.html
+++ b/html/info.html
@@ -2,7 +2,7 @@
 <html>
   <link rel="shortcut icon" type="image/jpg" href="img/favicon.ico"/>
   <head>
-    <title>Flash Games Archive</title>
+    <title>The Battle of Pearl Harbor</title>
     <link href="https://fonts.googleapis.com/css2?family=Amaranth&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -11,19 +11,14 @@
   <li><a class="active" href="index.html">Home</a></li>
   <li><a href="info.html">Info</a></li>
   <li><a href="http://github.com/0288007">Github</a></li>	
-  <li><a href="mailto:youremail@example.com">E-mail</a></li>		
+  <li><a href="mailto:helpfuljacek@outlook.com">E-mail</a></li>
 </ul>
 						
 		<header>
    	  <h1>"Playing games at school is strictly prohibited, the Chromebooks are to only be used for schoolwork."</h1>
 						</header>
     <center>
-      <p>The Flash Archive is a website with some Flash Games avaliable to play, there are currently <i>44</i> games available to play. This website was made in mind to also provide kids in schools who have free time to be able to play old games they used to enjoy but have not been able to play because of Flash shutting down.</p>
-			&nbsp;
-			<p>The Flash Archive uses Github to host the files and as the main host, Ruffle as the service to play the games, and Glitch and Codesandbox as alternative hosts.</p>
-			&nbsp; 
-			<p>There are 5 links that you can use to play. We have <a href="https://rawcdn.githack.com/Games-From-Flash/swf/main/html/index.html">Githack</a>, <a href="https://gitcdn.link/cdn/Games-From-Flash/swf/main/html/index.html">Gitcdn.link</a>, <a href="https://gitcdn.xyz/cdn/Games-From-Flash/swf/main/html/index.html">Gitcdn.xyz</a>, <a href="#">Codesandbox</a>, and <a href="#">Glitch</a>.</p>
-			&nbsp;
+<p>MetalNetDot is an unblocked games site based off of the code of "The Flash Archive" on Github. The main url is <a href="http://10.0.0.210">10.0.0.210</a>, which is self-hosted. Though if it's down, you can go to <a href="0288007.github.io/metalnetdot/html/index.html">0288007.github.io/metalnetdot/</a> which always be up. But due to GitHub Pages only supporting static website code, the chatroom only works on the self-hosted server.<br><br> Anyways, this network contains Flash games (and animations), including a few DOS games and some games ported to HTML5.<br><br> And a fancy shmancy chatroom with a login page allowing you to talk about whatever you want! (As long as it isn't illegal and/or traumatizing). Plus a song player on the menu that plays a different song depending on the day of the month! If you don't like the music, mute the website. <br><br>That's kind of it, so stay safe and don't get caught lacking! And the snitches get stitches and also no bitches. Oh yeah and please share this with your friends :D</p>
     </center>
   </body>
 </html>
